force-app/main/default/objects/csfb__Conga_Solution_Email_Template__c/fields/csfb__Comments__c.field-meta.xml
<CustomField>
    <fullName>csfb__Comments__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>