force-app/main/default/objects/csfb__Conga_Solution_Email_Template__c/fields/csfb__Conga_Email_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>csfb__Conga_Email_Template_Group__c</fullName>
    <formula>csfb__Conga_Email_Template__r.csfb__Template_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Email Template Group</label>
    <type>Text</type>
</CustomField>