force-app/main/default/objects/csfb__Conga_Solution_Email_Template__c/validationRules/csfb__CET_Count_Validator.validationRule-meta.xml
<ValidationRule>
    <fullName>csfb__CET_Count_Validator</fullName>
    <active>false</active>
    <description>Only one CET is allowed per solution</description>
    <errorConditionFormula>csfb__Conga_Solution__r.csfb__CongaEmailTemplateCount__c != 0</errorConditionFormula>
    <errorDisplayField>csfb__Conga_Email_Template__c</errorDisplayField>
    <errorMessage>Only one Conga Email Template is allowed per Conga Solution. To make changes, either modify the existing record or delete it and add a new one.</errorMessage>
</ValidationRule>